<resources>
    <string name="app_name">SongStar</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="favourites">Favourites</string>
    <string name="language">language</string>
    <string name="change_password">Change Password</string>
    <string name="add_users">Add Users</string>
    <string name="admin_options">Admin Options</string>
    <string name="remove_users">Remove Users</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_name">Edit Name</string>
    <string name="save">Save</string>
    <string name="save_changes">Save Changes</string>
    <string name="do_you_want_to_save_these_changes">Do you want to save these changes?</string>
    <string name="do_you_want_to_logout">Do you want to logout your account?</string>
    <string name="edit_language">Edit Language</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password_dont_match">Current password don\'t match</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="select_a_mode">Select a mode</string>
    <string name="song_star">Song Star</string>
    <string name="create_user">Create User</string>
    <string name="a_name_must_be_typed">A name must be typed.</string>
    <string name="a_username_must_be_typed">A username must be typed.</string>
    <string name="a_language_must_be_selected">A language must be selected.</string>
    <string name="a_password_must_be_typed">A password must be typed.</string>
    <string name="username_already_exists">Username already exists, please type another one</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="remove_user">Remove User</string>
    <string name="delete_user">Delete User</string>
    <string name="do_you_want_to_delete_this_user">Do you want to delete this user?</string>
    <string name="user_deleted_successfully">User deleted successfully.</string>
    <string name="search_artist">Search Artist</string>
    <string name="show_up_to">Show up to</string>
    <string name="song_name">Song Name</string>
    <string name="album_name">Album Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="gender_name">Gender Name</string>
    <string name="song_details">Song Details</string>
    <string name="not_found">Not Found.</string>
    <string name="password_needs_to_have">Password needs to have 4 or more characters.</string>
    <string name="song_already_on_your_favourites">Song already on your favourites.</string>
    <string name="favourite_songs">Favourite Songs</string>
    <string name="favourite_removed_successfully">Song deleted from favourites successfully.</string>
    <string name="most_listened_songs">Most Listened Songs</string>
</resources>