<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateUserActivity">

    <include
        android:id="@+id/topBar"
        layout="@layout/layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBar"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivAlbumPic"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:src="@drawable/ic_logo"/>
        <TextView
            android:id="@+id/tvSongTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_name"
            android:layout_marginVertical="5dp"
            android:textAlignment="center"
            android:textSize="10pt"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvAlbumName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_name"
            android:layout_marginVertical="5dp"
            android:textAlignment="center"
            android:textSize="9pt"/>
        <TextView
            android:id="@+id/tvArtistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            android:layout_marginVertical="3dp"
            android:textAlignment="center"
            android:textSize="9pt"/>

        <TextView
            android:id="@+id/tvGenderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_name"
            android:layout_marginVertical="3dp"
            android:textAlignment="center"
            android:textSize="9pt"/>
    </LinearLayout>

</RelativeLayout>