<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateUserActivity">

    <include
        android:id="@+id/topBar"
        layout="@layout/layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBar"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/name"
            android:inputType="text"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/user_name"
            android:inputType="text"
            android:importantForAutofill="no" />
        <Spinner
            android:id="@+id/spLanguage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>