<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:padding="2dp"
        android:layout_margin="5dp"
        app:tint="@color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_name"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/ivClose"
        android:textSize="9pt"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/name"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:layout_marginHorizontal="40dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>