<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">
    <include
        android:id="@+id/topBar"
        layout="@layout/layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBar"
        android:layout_above="@id/footer"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rlProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_profile"
                app:tint="@color/colorPrimary" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@id/ivProfilePic"
                android:layout_alignEnd="@id/ivProfilePic"
                android:padding="5dp"
                app:tint="@color/colorAccent"
                android:src="@drawable/ic_camera" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="John Doe"
                android:textColor="@color/black"
                android:textSize="10pt" />
            <ImageView
                android:id="@+id/ivEditName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                app:tint="@color/colorPrimary"
                android:src="@drawable/ic_edit" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:elevation="5dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp">
                    <EditText
                        android:id="@+id/etLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="8pt"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/language"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="false"
                        android:textColor="@color/black"
                        android:text=""
                        android:enabled="false"
                        android:importantForAutofill="no" />
                    <ImageView
                        android:id="@+id/ivEditLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="5dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_edit"
                        app:tint="@color/colorPrimary" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/tvChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"
                    android:textSize="8pt"
                    app:drawableEndCompat="@drawable/ic_right_arrow" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_gray" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAdminOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:elevation="5dp"
            app:cardCornerRadius="5dp"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/admin_options"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="9pt"
                        android:layout_marginHorizontal="10dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_gray"/>
                <TextView
                    android:id="@+id/tvAddUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/add_users"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"
                    android:textSize="8pt"
                    app:drawableEndCompat="@drawable/ic_right_arrow" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_gray" />
                <TextView
                    android:id="@+id/tvRemoveUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/remove_users"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"
                    android:textSize="8pt"
                    app:drawableEndCompat="@drawable/ic_right_arrow"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:text="@string/logout"
                android:textColor="@color/red"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomBarMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            app:itemBackground="@color/light_gray"
            app:itemIconTint="@drawable/selector_bottom_bar"
            app:itemTextColor="@drawable/selector_bottom_bar"
            app:menu="@menu/bottom_bar_menu" />
    </LinearLayout>

</RelativeLayout>